--- a/packages/boundaries/tsconfig.json
+++ b/packages/boundaries/tsconfig.json
@@ -1,10 +1,8 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "@kb-labs/devkit/tsconfig/lib.json",
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "noEmit": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "composite": true
   },
   "include": ["src"]
 }
