--- a/tsconfig.tools.json
+++ b/tsconfig.tools.json
@@ -1,8 +1,11 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "@kb-labs/devkit/tsconfig/node.json",
   "files": [],
   "references": [
-    { "path": "packages/package-name" },
+    { "path": "packages/boundaries" },
+    { "path": "packages/diff" },
+    { "path": "packages/profiles" },
+    { "path": "packages/textops" },
     { "path": "apps/demo" }
   ],
   "compilerOptions": {
