--- a/packages/profiles/tsconfig.json
+++ b/packages/profiles/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "extends": "@kb-labs/devkit/tsconfig/lib.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "outDir": "dist"
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*",
+    "tests/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
