feat[deps]: update vitest and integrate devkit dependencies
- Update vitest to v3.2.4 across all packages
- Add test:coverage scripts to packages
- Integrate @kb-labs/devkit dependencies
- Update root test:coverage command to use centralized vitest
- Sync demo app with updated dependencies

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "lint": "pnpm -r exec eslint .",
     "lint:fix": "pnpm -r exec eslint . --fix",
     "test": "pnpm -r --if-present run test",
-    "test:coverage": "pnpm -r --if-present run test --coverage",
+    "test:coverage": "vitest run --coverage",
     "test:watch": "pnpm -r --parallel --if-present run test:watch",
     "type-check": "pnpm -r run type-check",
     "format": "prettier -w .",
