--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview --port 5050",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "dependencies": {},
   "devDependencies": {
@@ -21,6 +21,6 @@
     "eslint-plugin-unused-imports": "^4.0.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "vitest": "^2.1.4"
+    "vitest": "^3.2.4"
   }
 }
