--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "packageManager": "pnpm@9.11.0",
   "dependencies": {
-    "@kb-labs/devkit": "github:KirillBaranov/kb-labs-devkit#main",
+    "@kb-labs/devkit": "link:../kb-labs-devkit",
     "zod": "^4.1.5"
   }
 }
