feat(demo): add eslint configuration to demo app
- Add eslint dependencies to apps/demo package.json
- Create eslint.config.js using @kb-labs/devkit as base configuration
- Ensure consistent linting standards across the demo application
- Improve code quality and maintainability for the demo app

--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "eslint": "^9.16.0",
