--- a/packages/cli-ui/package.json
+++ b/packages/cli-ui/package.json
@@ -32,7 +32,7 @@
     "glob": "^11.0.0"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
+    "@kb-labs/devkit": "workspace:*",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
