--- a/packages/review-types/package.json
+++ b/packages/review-types/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "@kb-labs/shared-cli-ui",
+  "name": "@kb-labs/shared-review-types",
   "version": "0.1.0",
   "type": "module",
-  "private": true,
-  "description": "Shared CLI UI utilities for KB Labs projects - colors, formatting, progress indicators",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -22,25 +20,16 @@
     "clean": "rimraf dist",
     "build": "tsup --config tsup.config.ts",
     "dev": "tsup --config tsup.config.ts --watch",
-    "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
-    "lint:fix": "eslint src --ext .ts,.tsx,.js,.jsx --fix",
     "type-check": "tsc --noEmit",
     "test": "vitest run",
-    "test:watch": "vitest"
-  },
-  "dependencies": {
-    "glob": "^11.0.0"
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
+    "@types/node": "^24.3.3",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
     "vitest": "^3.2.4"
-  },
-  "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=9.0.0"
-  },
-  "packageManager": "pnpm@9.11.0"
+  }
 }
+
