feat(shared-cli-ui): add shared context helpers
Expose getContextCwd/toPosixPath, enhance artifact discovery UX, and sync docs plus package metadata for the shared CLI UI.

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "build:clean": "pnpm -r run clean && pnpm -r run build",
     "dev": "pnpm -r --parallel run dev",
     "// ——— quality": "────────────────────────────────────────",
-    "lint": "pnpm -r exec eslint .",
-    "lint:fix": "pnpm -r exec eslint . --fix",
+    "lint": "pnpm -r --filter=\"./packages/*\" run lint",
+    "lint:fix": "pnpm -r --filter=\"./packages/*\" run lint:fix",
     "test": "pnpm -r --if-present run test",
     "test:coverage": "vitest run --coverage",
     "test:watch": "pnpm -r --parallel --if-present run test:watch",
