--- a/packages/cli-ui/package.json
+++ b/packages/cli-ui/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
+    "eslint": "^9.16.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
