--- a/package.json
+++ b/package.json
@@ -24,9 +24,14 @@
   "scripts": {
     "// ——— devkit": "────────────────────────────────────────",
     "devkit:sync": "node scripts/devkit-sync.mjs",
+    "predevkit:sync": "pnpm devkit:paths",
+    "devkit:paths": "pnpm exec kb-devkit-paths",
     "devkit:sync:ci": "node scripts/devkit-sync.mjs --ci-only",
+    "predevkit:sync:ci": "pnpm devkit:paths",
     "devkit:check": "node scripts/devkit-sync.mjs --check",
+    "predevkit:check": "pnpm devkit:paths",
     "devkit:force": "node scripts/devkit-sync.mjs --force",
+    "predevkit:force": "pnpm devkit:paths",
     "devkit:help": "node scripts/devkit-sync.mjs --help",
     "postinstall": "pnpm -s devkit:sync || true",
     "// ——— core": "────────────────────────────────────────",
