--- a/packages/cli-ui/package.json
+++ b/packages/cli-ui/package.json
@@ -14,6 +14,17 @@
     "./debug": {
       "import": "./dist/debug.js",
       "types": "./dist/debug.d.ts"
+    },
+    "./table": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "*": ["src/*"],
+      "debug": ["src/debug"],
+      "debug/*": ["src/debug/*"]
     }
   },
   "files": [
@@ -33,7 +44,13 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "glob": "^11.0.0"
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "glob": "^11.0.0",
+    "picomatch": "^4.0.2",
+    "uuidv7": "^1.0.0",
+    "yaml": "^2.8.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
