--- a/packages/cli-ui/tsconfig.json
+++ b/packages/cli-ui/tsconfig.json
@@ -1,9 +1,5 @@
 {
-  "extends": "@kb-labs/devkit/tsconfig/lib.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src"
-  },
-  "include": ["src/**/*"],
+  "extends": "../../tsconfig.base.json",
+  "include": ["src"],
   "exclude": ["dist", "node_modules"]
 }
