--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,19 +1,9 @@
 {
-  "extends": "@kb-labs/devkit/tsconfig/base.json",
+  "extends": [
+    "@kb-labs/devkit/tsconfig/base.json",
+    "./tsconfig.paths.json"
+  ],
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": false,
-    "sourceMap": true,
-    "baseUrl": ".",
-    "paths": {
-      "@kb-labs/shared-boundaries": ["packages/boundaries/dist"],
-      "@kb-labs/shared-boundaries/*": ["packages/boundaries/dist/*"],
-      "@kb-labs/shared-diff": ["packages/diff/dist"],
-      "@kb-labs/shared-diff/*": ["packages/diff/dist/*"],
-      "@kb-labs/shared-profiles": ["packages/profiles/dist"],
-      "@kb-labs/shared-profiles/*": ["packages/profiles/dist/*"],
-      "@kb-labs/shared-textops": ["packages/textops/dist"],
-      "@kb-labs/shared-textops/*": ["packages/textops/dist/*"]
-    }
+    "baseUrl": "."
   }
 }
