--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -169,7 +169,7 @@
         "../kb-labs-core/packages/bundle/src/*"
       ],
       "@kb-labs/core-cli": [
-        "../kb-labs-core/packages/cli-core/src/index.ts"
+        "../kb-labs-core/packages/cli/src/index.ts"
       ],
       "@kb-labs/core-cli-adapters": [
         "../kb-labs-core/packages/cli-adapters/src/index.ts"
@@ -178,7 +178,7 @@
         "../kb-labs-core/packages/cli-adapters/src/*"
       ],
       "@kb-labs/core-cli/*": [
-        "../kb-labs-core/packages/cli-core/src/*"
+        "../kb-labs-core/packages/cli/src/*"
       ],
       "@kb-labs/core-config": [
         "../kb-labs-core/packages/config/src/index.ts"
@@ -506,6 +506,24 @@
       ],
       "@kb-labs/shared-textops/*": [
         "packages/textops/src/*"
+      ],
+      "@kb-labs/state-broker": [
+        "../kb-labs-core/packages/state-broker/src/index.ts"
+      ],
+      "@kb-labs/state-broker/*": [
+        "../kb-labs-core/packages/state-broker/src/*"
+      ],
+      "@kb-labs/state-daemon": [
+        "../kb-labs-core/packages/state-daemon/src/index.ts"
+      ],
+      "@kb-labs/state-daemon/*": [
+        "../kb-labs-core/packages/state-daemon/src/*"
+      ],
+      "@kb-labs/tenant": [
+        "../kb-labs-core/packages/tenant/src/index.ts"
+      ],
+      "@kb-labs/tenant/*": [
+        "../kb-labs-core/packages/tenant/src/*"
       ],
       "@kb-labs/ui-core": [
         "../kb-labs-studio/packages/ui-core/src/index.ts"
