--- a/packages/boundaries/package.json
+++ b/packages/boundaries/package.json
@@ -27,16 +27,10 @@
     "lint": "eslint . --ignore-pattern 'dist/**'",
     "lint:fix": "eslint . --fix --ignore-pattern 'dist/**'"
   },
-  "dependencies": {
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
-    "picomatch": "^4.0.2",
-    "yaml": "^2.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^24.3.3",
     "@types/picomatch": "^4",
-    "cpy-cli": "^4.2.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
