--- a/packages/cli-ui/package.json
+++ b/packages/cli-ui/package.json
@@ -22,9 +22,15 @@
   },
   "typesVersions": {
     "*": {
-      "*": ["src/*"],
-      "debug": ["src/debug"],
-      "debug/*": ["src/debug/*"]
+      "*": [
+        "src/*"
+      ],
+      "debug": [
+        "src/debug"
+      ],
+      "debug/*": [
+        "src/debug/*"
+      ]
     }
   },
   "files": [
@@ -44,17 +50,11 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
-    "glob": "^11.0.0",
-    "picomatch": "^4.0.2",
-    "uuidv7": "^1.0.0",
-    "yaml": "^2.8.0",
-    "zod": "^4.1.5"
+    "glob": "^11.0.0"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
-    "eslint": "^9.16.0",
+    "eslint": "^9",
     "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
