--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,17 +3,29 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@kb-labs/analytics-sdk-node": [
-        "../kb-labs-analytics/packages/analytics-sdk-node/src/index.ts"
-      ],
-      "@kb-labs/analytics-sdk-node/*": [
-        "../kb-labs-analytics/packages/analytics-sdk-node/src/*"
-      ],
       "@kb-labs/cli-contracts": [
         "../kb-labs-cli/packages/cli-contracts/src/index.ts"
       ],
       "@kb-labs/cli-contracts/*": [
         "../kb-labs-cli/packages/cli-contracts/src/*"
+      ],
+      "@kb-labs/core-platform": [
+        "../kb-labs-core/packages/core-platform/src/index.ts"
+      ],
+      "@kb-labs/core-platform/*": [
+        "../kb-labs-core/packages/core-platform/src/*"
+      ],
+      "@kb-labs/plugin-manifest": [
+        "../kb-labs-plugin/packages/plugin-manifest/src/index.ts"
+      ],
+      "@kb-labs/plugin-manifest/*": [
+        "../kb-labs-plugin/packages/plugin-manifest/src/*"
+      ],
+      "@kb-labs/plugin-runtime": [
+        "../kb-labs-plugin/packages/plugin-runtime/src/index.ts"
+      ],
+      "@kb-labs/plugin-runtime/*": [
+        "../kb-labs-plugin/packages/plugin-runtime/src/*"
       ],
       "@kb-labs/shared-cli-ui": [
         "packages/shared-cli-ui/src/index.ts"
