--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -15,6 +15,12 @@
       "@kb-labs/core-platform/*": [
         "../kb-labs-core/packages/core-platform/src/*"
       ],
+      "@kb-labs/core-runtime": [
+        "../kb-labs-core/packages/core-runtime/src/index.ts"
+      ],
+      "@kb-labs/core-runtime/*": [
+        "../kb-labs-core/packages/core-runtime/src/*"
+      ],
       "@kb-labs/core-workspace": [
         "../kb-labs-core/packages/core-workspace/src/index.ts"
       ],
