--- a/packages/shared-command-kit/package.json
+++ b/packages/shared-command-kit/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@kb-labs/cli-contracts": "link:../../../kb-labs-cli/packages/cli-contracts",
     "@kb-labs/core-platform": "link:../../../kb-labs-core/packages/core-platform",
+    "@kb-labs/core-resource-broker": "link:../../../kb-labs-core/packages/core-resource-broker",
     "@kb-labs/core-runtime": "link:../../../kb-labs-core/packages/core-runtime",
     "@kb-labs/core-workspace": "link:../../../kb-labs-core/packages/core-workspace",
     "@kb-labs/plugin-manifest": "link:../../../kb-labs-plugin/packages/plugin-manifest",
