refactor(shared-cli-ui): update shared-cli-ui package configuration
- update main entry point to use CommonJS
- add module field for ES module support

🤖 Generated by kb-labs-commit-plugin

--- a/packages/shared-cli-ui/package.json
+++ b/packages/shared-cli-ui/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "description": "Shared CLI UI utilities for KB Labs projects - colors, formatting, progress indicators",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
@@ -64,5 +64,6 @@
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@9.11.0"
+  "packageManager": "pnpm@9.11.0",
+  "module": "./dist/index.js"
 }
