--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@kb-labs/shared",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "description": "KB Labs product template",
+  "description": "Shared utilities and contracts for KB Labs ecosystem",
   "type": "module",
   "author": {
     "name": "Kirill Baranov",
