--- a/packages/shared-perm-presets/package.json
+++ b/packages/shared-perm-presets/package.json
@@ -20,18 +20,27 @@
     "build": "tsup",
     "clean": "rimraf dist",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "dev": "tsup --config tsup.config.ts --watch",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {},
   "devDependencies": {
-    "@kb-labs/devkit": "workspace:*",
-    "typescript": "^5.0.0",
-    "tsup": "^8.0.0",
-    "rimraf": "^5.0.0",
-    "vitest": "^2.0.0"
+    "@kb-labs/devkit": "link:../../../kb-labs-devkit",
+    "typescript": "^5.6.3",
+    "tsup": "^8.5.0",
+    "rimraf": "^6.0.1",
+    "vitest": "^3.2.4",
+    "@types/node": "^24.3.3"
   },
   "publishConfig": {
     "access": "public"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
+  }
 }
