refactor(config): update root package.json and tsconfig
- updated root tsconfig to extend from @kb-labs/devkit
- adjusted schema and compiler options

🤖 Generated by kb-labs-commit-plugin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "files": [],
-  "references": [
-    { "path": "packages/shared-boundaries" },
-    { "path": "packages/shared-diff" },
-    { "path": "packages/profiles" },
-    { "path": "packages/shared-textops" },
-    { "path": "apps/demo" }
-  ]
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "@kb-labs/devkit/tsconfig/node.json",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist"
+  },
+  "include": ["src"]
 }
