--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "tsup": "^8.5.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@kb-labs/devkit": "link:../kb-labs-devkit",
+    "rimraf": "^6.0.1"
   },
   "engines": {
     "node": ">=18.18.0",
