--- a/packages/shared-command-kit/tsconfig.json
+++ b/packages/shared-command-kit/tsconfig.json
@@ -1,17 +1,9 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "@kb-labs/devkit/tsconfig/node.json",
   "compilerOptions": {
+    "rootDir": "src",
     "outDir": "dist"
   },
-  "include": [
-    "src",
-    "vitest.config.ts",
-    "eslint.config.ts",
-    "tsup.config.ts"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  "include": ["src"]
 }
-
