--- a/packages/shared-perm-presets/package.json
+++ b/packages/shared-perm-presets/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rimraf dist",
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "test:watch": "vitest",
     "dev": "tsup --config tsup.config.ts --watch",
     "lint": "eslint src --ext .ts",
