--- a/packages/shared-command-kit/package.json
+++ b/packages/shared-command-kit/package.json
@@ -45,19 +45,19 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "type-check": "tsc --noEmit",
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@kb-labs/cli-contracts": "link:../../../kb-labs-cli/packages/cli-contracts",
-    "@kb-labs/plugin-contracts": "link:../../../kb-labs-plugin/packages/plugin-contracts",
-    "@kb-labs/studio-contracts": "link:../../../kb-labs-studio/packages/studio-contracts",
     "@kb-labs/core-platform": "link:../../../kb-labs-core/packages/core-platform",
     "@kb-labs/core-resource-broker": "link:../../../kb-labs-core/packages/core-resource-broker",
     "@kb-labs/core-runtime": "link:../../../kb-labs-core/packages/core-runtime",
+    "@kb-labs/plugin-contracts": "link:../../../kb-labs-plugin/packages/plugin-contracts",
     "@kb-labs/plugin-runtime": "link:../../../kb-labs-plugin/packages/plugin-runtime",
     "@kb-labs/shared-cli-ui": "workspace:*",
-    "zod": "^3.23.8"
+    "@kb-labs/studio-contracts": "link:../../../kb-labs-studio/packages/studio-contracts",
+    "zod": "^3.23.8",
+    "glob": "^11.0.0"
   },
   "devDependencies": {
     "@kb-labs/devkit": "link:../../../kb-labs-devkit",
